[gd_scene load_steps=9 format=3 uid="uid://cpu22ev2swtsy"]

[ext_resource type="Script" path="res://scene/mini_games/runny_nose/runny_nose.gd" id="1_tmi7n"]
[ext_resource type="Texture2D" uid="uid://cp4auk1yhday2" path="res://scene/mini_games/runny_nose/drop.png" id="2_h4d1s"]
[ext_resource type="Texture2D" uid="uid://bb6x6y41arfcf" path="res://scene/mini_games/runny_nose/hand.png" id="3_k56vq"]
[ext_resource type="Texture2D" uid="uid://ceme1j1xqviyp" path="res://scene/mini_games/runny_nose/ice.png" id="4_68fsy"]
[ext_resource type="Texture2D" uid="uid://betjagdtn62v2" path="res://scene/mini_games/runny_nose/nouse.png" id="5_jkkpl"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_jt4rr"]
radius = 5.0
height = 16.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jhabw"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_33lnr"]
size = Vector2(17, 23)

[node name="RunnyNose" type="Node"]
script = ExtResource("1_tmi7n")

[node name="Node2D" type="Node2D" parent="."]
position = Vector2(42, 24)

[node name="Drop" type="Sprite2D" parent="Node2D"]
position = Vector2(0, -17)
texture = ExtResource("2_h4d1s")

[node name="DropHitBox" type="Area2D" parent="Node2D/Drop"]
position = Vector2(34, 7)
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/Drop/DropHitBox"]
shape = SubResource("CapsuleShape2D_jt4rr")

[node name="Nose" type="Sprite2D" parent="Node2D"]
texture = ExtResource("5_jkkpl")

[node name="NoseCollision" type="Area2D" parent="Node2D/Nose"]
position = Vector2(32, -14)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/Nose/NoseCollision"]
shape = SubResource("RectangleShape2D_jhabw")

[node name="Ice" type="Sprite2D" parent="Node2D"]
visible = false
texture = ExtResource("4_68fsy")

[node name="Hand" type="Sprite2D" parent="Node2D"]
position = Vector2(-28, 1)
texture = ExtResource("3_k56vq")
offset = Vector2(28, -1)

[node name="HandCollision" type="Area2D" parent="Node2D/Hand"]
position = Vector2(10, 9)
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/Hand/HandCollision"]
position = Vector2(0, -1.5)
shape = SubResource("RectangleShape2D_33lnr")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="SceneTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="MarginContainer" type="MarginContainer" parent="."]
offset_right = 84.0
offset_bottom = 48.0

[node name="ProgressBar" type="ProgressBar" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 8
max_value = 5.0
step = 0.25
show_percentage = false
